[package]
name = "spellbreak-mod"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ctor = "0.1.25"
dll-syringe = "0.15.0"
ctrlc = "3.2.5"
retour = "0.1.0"
windows = "0.44.0"
winapi = "0.3.9"

[lib]
name = "spellbreak_mod"
path = "src/lib.rs"
crate-type = ["cdylib"]

[[bin]]
name = "spellbreak_mod_run"
path = "src/main.rs"
